# secure-deps

./: .gitignore  CMakeLists.sec4.txt  CMakeLists.txt  Makefile  README.md  allowlist_libs.txt  allowlist_repos.txt
include/: allowlist.h  cmake_fetchcontent.h  makefile_parser.h
result/: sec2_output.json  sec2_output2.json  sec4_output.json
src/: allowlist.cpp  cmake_fetchcontent.cpp  main.cpp  makefile_parser.cpp
tests/: test_allowlist.cpp  test_cmake_fetchcontent.cpp  test_makefile_parser.cpp
